# mcp-slicer

./: PUBLISHING.md  PUBLISHING_zh.md  README.md  README_zh.md  pyproject.toml  test_tools.py
src/mcp_slicer/: mcp_server.py
