[project]
name = "mcp-slicer"
version = "0.2.1"
description = "A MCP server for 3D Slicer"
readme = "README.md"
authors = [
    { name = "zhaoyouj", email = "zhaoyouj@outlook.com" }
]
keywords = ["mcp", "3d slicer", "medical imaging"]
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Healthcare Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.4.1",
    "requests>=2.32.3",
]

[project.scripts]
mcp-slicer = "mcp_slicer.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Homepage = "https://github.com/zhaoyouj/mcp-slicer"
Documentation = "https://github.com/zhaoyouj/mcp-slicer#readme"
Repository = "https://github.com/zhaoyouj/mcp-slicer.git"
"Bug Tracker" = "https://github.com/zhaoyouj/mcp-slicer/issues"